src/components/HomepageFeatures/styles.module.css
.features {
  display: flex;
  align-items: center;
  padding: 2rem 0;
  width: 100%;
}

.featureSvg {
  height: 140px;
  width: auto;
}

.openSource {
  text-align: center;
  margin-top: 2.5rem;
  font-size: 0.8rem;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: var(--ifm-color-primary-darkest);
  opacity: 0.5;
}

